objects/WorkflowBatchSize__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <label>Change Control</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension_Request_Change_Control__c</fullName>
        <label>Extension Request Change Control</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Assessment__c</fullName>
        <label>Impact Assessment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The batch size for the workflow automation related to a specific parent object.</description>
    <label>Workflow Batch Size</label>
</CustomObject>